--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<link rel="stylesheets" href="style.css"/>
+<link rel="stylesheet" href="style.css"/>
     <body>
         <header>
             <a href="#shedule">Расписание</a> <a href="#lessons">О занятиях</a> <a href="#photos">Фотографии</a>
